# knapsack

./: .dockerignore  .gitignore  BATCH_EVALUATION_RESULTS.md  BENCHMARK_SETUP_SUMMARY.md  CHANGES.md  CHARIOT_CGO_DEBUG_GUIDE.md  CHARIOT_QUICK_START.md  CHARIOT_TEST_SUITE_SUMMARY.md  CHARIOT_V2_SCHEMA_RESPONSE.md  CMakeLists.txt  COMMIT_MESSAGE.md  COMMIT_MESSAGE_LIBRARIES.md  CROSS_PLATFORM_BUILD.md  DOCUMENTATION_UPDATE_SUMMARY.md  LIBRARY_BUILD_FIX_SUMMARY.md  LIBRARY_CONSOLIDATION_SUMMARY.md  LIBRARY_NAMING.md  LIBRARY_NAMING_SUMMARY.md  LICENSE  LINUX_LIBRARY_FIX.md  MANIFEST.in  METAL_EVALUATION_COMPLETE.md  METAL_GPU_SUMMARY.md  METAL_TESTING_SUMMARY.md  ONNX_INTEGRATION_COMPLETE.md  PERFORMANCE_BENCHMARKING_SUMMARY.md  PERFORMANCE_STUDY.md  PLATFORM_LIBRARY_VERIFICATION.md  QUICK_REFERENCE.md  README.md  README_UPDATE_SUMMARY.md  READY_FOR_GO_CHARIOT.md  RL_LIBRARY_DISTRIBUTION_COMPLETE.md  SUCCESS_SUMMARY.md  SUCCESS_WITH_CUDA.md  TEST_BUG_FIX_SUMMARY.md  UNIT_TESTING_SUMMARY.md  debug_penalty  debug_penalty.cpp  go.work  (+2 more)
benchmark_results/: cpu_vs_metal_quick.csv  m1_assign_small_mkp.csv  m1_crossover_example_select.csv  m1_crossover_small_mkp.csv
bindings/go/metal/: eval_block_candidates.metal  go.mod  metal.go  metal_stub.go  metal_test.go
bindings/go/rl/: rl.go
bindings/go/v2/: go.mod  v2.go  v2_stub.go  v2_test.go
bindings/python/: IMPLEMENTATION.md  README.md  example.py  knapsack_py.cpp  rl_support.py  test_bindings.py
build-lib/: knapsack_v2_cli  opts.json  opts_dom.json
data/: benchmarks  villages-v2.csv  villages_300.csv  villages_300_realnames.csv  villages_50.csv
docker/: Dockerfile.builder  Dockerfile.linux-cpu  Dockerfile.linux-cuda
docs/: AOA-MOAOA-Implementation-Plan.md  AOA_MOAOA_USAGE.md  ATTRIBUTIONS.md  BENCHMARK_DATASETS.md  BeamAsDataScout.md  BeamNextBestAction.md  BeamSearchAlgo.md  CUDA-Metal-Compilation.md  CUDA-Metal-v2.md  CUDA_SUPPORT.md  Chariot-V2-SolverIntegration.md  DistributedQAOA.md  DominanceFiltersAndSurrogateCapacity.md  DominanceFiltersInKnapsack.md  DynamicOptimization.md  ExampleArtifactsYAML-CUDA-Chariot.md  GO_CHARIOT_INTEGRATION.md  Gurobi-VS-Knapsack-V2.md  Incremental_Optimization_Scenarios_Report.docx  LargeDatasetOptions.md  LinearQuadraticSolver.md  ONNX_INTEGRATION_STATUS.md  ONNX_MODEL_GEN.md  PLATFORM_SPECIFIC_LIBS.md  PlanForV2.md  PredictorModule.md  RL_CONFIG_EXAMPLE.json  RL_SUPPORT.md  V2_JSON_SCHEMA.md
docs/knapsack_dual_backend_template/shaders/: eval_block_candidates.metal
docs/knapsack_dual_backend_template/src/: backend_factory.cpp  cuda_backend.cu  main.cpp  metal_backend.mm
docs/knapsack_dual_backend_template_v2/include/: backend.hpp
docs/knapsack_dual_backend_template_v2/shaders/: eval_block_candidates.metal
docs/knapsack_dual_backend_template_v2/src/: main.cpp  metal_backend.mm
docs/v2/: README.md  example_assign.json  example_select.json  example_select_multi.json  example_villages.json
examples/: IMPLEMENTATION.md  README.md
examples/python/: 01_basic_knapsack.py  02_debt_portfolio.py  03_investment_portfolio.py  04_pandas_integration.py  05_visualization.py  06_exact_solver_integration.py  convert_orlib_mkp.py
include/: Constants.h  Context.h  InputModule.h  Kernels.h  RecursiveSolver.h  ResultWriter.h  RoutePlanner.h  RouteUtils.h  VanRouteWriter.h
include/v2/: Config.h  Data.h  DataFormats.h  Engine.h  Eval.h  Preprocess.h
kernels/: GpuKernels.cu  GpuWrappers.cu
kernels/cuda/: cuda_api.cu  cuda_api.h
kernels/metal/: metal_api.h  metal_api.mm
kernels/metal/shaders/: eval_block_candidates.metal
knapsack-library/: CMakeLists.txt  publish-libs.sh
knapsack-library/build-test/: knapsack_v2_cli
knapsack-library/include/: knapsack_c.h
knapsack-library/lib/: README.md
knapsack-library/src/: knapsack_c.cpp  knapsack_solve.cpp
predictor/: .gitignore  README.md  pyproject.toml
predictor/scripts/: export_scores.py  serve_api.py  train_baseline.py
predictor/src/knapsack_predictor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
predictor/src/predictor/: __init__.py  config.py
predictor/src/predictor/features/: __init__.py  builder.py
predictor/src/predictor/io/: __init__.py  schemas.py
predictor/src/predictor/models/: __init__.py  baseline.py  catboost_demo.py  survival.py
predictor/src/predictor/pipelines/: __init__.py  export_scores.py  train_baseline.py
predictor/src/predictor/serve/: __init__.py  app.py
predictor/tests/fixtures/: catboost_accounts.json  scores_sample.json
predictor/tests/unit/: test_catboost_demo.py  test_feature_builder.py  test_schema_contract.py
rl/: rl_api.cpp
scripts/: analyze_benchmark.py  benchmark_cpu_vs_metal.py  build-all-platforms.sh  download_benchmarks.sh  plot_benchmark.py  quick_benchmark.py
shared/schemas/predictor/: README.md  item_scores.schema.json  score.proto
src/: InputModule.cpp  RecursiveSolver.cpp  ResultWriter.cpp  RoutePlanner.cpp  RouteUtils.cpp  VanRouteWriter.cpp  main.cpp
src/v2/: BeamSearch.cpp  Config.mm  Config_json.cpp  Config_validate.cpp  Data.cpp  DataFormats.cpp  EvalCPU.cpp  EvalMetal.mm  Preprocess.cpp
tests/: run_chariot_validation.sh
tests/python/: test_knapsack_c_api.py  test_knapsack_v2_api.py
tests/v2/: CMakeLists.txt  dummy_model.onnx  test_beam_search.cpp  test_config_validate.cpp  test_data_ingest.cpp  test_eval_cpu.cpp  test_eval_metal.cpp  test_rl_api.cpp  tiny_linear_12.onnx  tiny_linear_8.onnx
tools/: benchmark_batch_cpu_assign.cpp  benchmark_batch_cpu_vs_metal.cpp  benchmark_cpu_vs_metal.cpp  convert_orlibrary_to_arrow.cpp  convert_small_mkp_to_v2.cpp  gen_onnx_model.py  gen_synth_select.cpp  nba_beam_example.cpp  test_link_v2.c  v2_assign_sanity.cpp  v2_beam_sanity.cpp  v2_config_sanity.cpp  v2_eval_sanity.cpp  v2_metal_parity_sanity.cpp  v2_multi_constraint_beam_sanity.cpp  v2_multi_constraint_parity.cpp  v2_multi_constraint_parity_cuda.cpp  v2_scout_demo.cpp  v2_soa_sanity.cpp
