[project]
name = "knapsack-predictor"
version = "0.1.0"
description = "Predictive modeling and scoring pipelines for the knapsack optimizer"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Knapsack contributors" }]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "polars>=0.20",
  "pyarrow>=15.0",
  "pydantic>=2.5",
  "scikit-learn>=1.4",
  "xgboost>=2.0",
  "lightgbm>=4.1",
  "catboost>=1.2",
  "lifelines>=0.27",
  "pycox>=0.3",
  "mlflow>=2.9",
  "fastapi>=0.110",
  "uvicorn>=0.24",
  "prefect>=2.14",
  "click>=8.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.1.9",
  "mypy>=1.8"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
